--- a/index.html
+++ b/index.html
@@ -1,174 +1,41 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>DHT Readings</title>
-	<style type="text/css">
-		body{
-			background-color: #F5F5F5;
-			font-family: Arial, sans-serif;
-			margin: 0;
-			padding: 0;
-		}
-		.data-container{
-			display: flex;
-			justify-content: space-between;
-			width: 50%;
-			margin: 50px auto;
-			padding: 20px;
-			background-color: #FFF;
-			box-shadow: 0 2px 20px rgba(0, 0, 0,0.1);
-			border-radius: 10px;
-		}
-
-		.data-item{
-			text-align: center;
-		}
-
-		.data-item h2{
-			font-size: 24px;
-			font-weight: bold;
-			margin-bottom: 10px;
-		}
-
-		.data-item p{
-			font-size: 48px;
-			font-weight: bold;
-			color: #6EB7FF;
-		}
-
-		.data-head{
-			margin: auto;
-			width: 50%;
-			text-align: center;
-			font-size: 45px;
-			font-weight: bold;
-			margin: 50px auto;
-			padding: 20px;
-			background-color: #FFF;
-			box-shadow: 0 5px 20px rgba(0, 0, 0, 0.1);
-			border-radius: 20px;
-
-
-		}
-
-
-
-	</style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Smart Parking System</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-
-	<div class="data-head">DHT Sensor Realtime Readings</div>
-
-	<div class="data-container">
-		<div class="data-item">
-			<h2>Temperature</h2>
-			<p class="value" id="temperature">22 &#8451;</p>
-		</div>
-		<div class="data-item">
-			<h2>LED</h2>
-			<button onclick="press()" id="led">turn on</button>
-			
-		</div>
-		<div class="data-item">
-			<h2>Humidity</h2>
-			<p class="value" id="humidity">10%</p>
-		</div>
-
-		
-	</div>
-
-	<!-- the scripts for products you want to access must be added-->
-
-	<script src="https://www.gstatic.com/firebasejs/8.6.8/firebase-app.js"></script>
-
-	<script src="https://www.gstatic.com/firebasejs/8.6.8/firebase-database.js"></script>
+<div class="container">
+    <h1>Smart Parking System</h1>
+    <div id="parkingStatus">
+        <p>Parking Spot Free: <span id="parkingSpotFree">Yes</span></p>
+        <canvas id="parkingChart"></canvas>
+    </div>
+    <div class="container">
+        <div class="row justify-content-center">
+            <div id="lcdDisplay" class="col-md-6 mt-3 mb-2">
+                <span id="lcdText">Car is exiting</span>
+            </div>
+            <div id="servoControl" class="col-md-6">
+                <p class="switch-label">Gate Status</p>
+                <div class="switch-button" id="toggleGateButton">
+                    <div class="switch-handle"></div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
 
 
-	<script type="module">
- import { initializeApp } from "https://www.gstatic.com/firebasejs/10.6.0/firebase-app.js";
+</div>
 
-  import { getAnalytics } from "https://www.gstatic.com/firebasejs/10.6.0/firebase-analytics.js";
-
-  // TODO: Add SDKs for Firebase products that you want to use
-
-  // https://firebase.google.com/docs/web/setup#available-libraries
-
-
-  // Your web app's Firebase configuration
-
-  // For Firebase JS SDK v7.20.0 and later, measurementId is optional
-
-//   const firebaseConfig = {
-
-//     apiKey: "AIzaSyCl4unu9pY2DDQxVgPjIM12i-jViTtAVTk",
-
-//     authDomain: "iot2023-20c28.firebaseapp.com",
-
-//     databaseURL: "https://iot2023-20c28-default-rtdb.firebaseio.com",
-
-//     projectId: "iot2023-20c28",
-
-//     storageBucket: "iot2023-20c28.appspot.com",
-
-//     messagingSenderId: "1078279391484",
-
-//     appId: "1:1078279391484:web:16f2d8e01dc6d004bbef79",
-
-//     measurementId: "G-KB6FT1D0HC"
-
-//   };
-
-
-//   // Initialize Firebase
-
-//   //const app = initializeApp(firebaseConfig);
-
-//   //const analytics = getAnalytics(app);
-//   firebase.initializeApp(firebaseConfig);
-
-// 	  // getting reference to the database
-// 	  var database = firebase.database();
-
-// 	  //getting reference to the data we want
-// 	  var dataRef1 = database.ref('temp');
-// 	  var dataRef2 = database.ref('humid');
-// 	  var dataRef3 = database.ref('led');
-
-// 	  //fetch the data
-// 	  dataRef1.on('value', function(getdata1){
-// 	  	var humi = getdata1.val();
-// 	  	document.getElementById('humidity').innerHTML = humi + "%";
-// 	  })
-
-// 	   dataRef2.on('value', function(getdata2){
-// 	  	var temp = getdata2.val();
-// 	  	document.getElementById('temperature').innerHTML = temp + "&#8451;";
-// 	  })
-
-
-
-
-// 	</script>
-// <script type="text/javascript">
-// 	var index=0;
-// var btn=document.getElementById("led");
-// btn.add
-// function press() {
-// index++;
-// if (index%2==1) {
-// 	database.ref('LED').set("1");
-// 	document.getElementById('led').innerHTML="turn off";
-// }
-// else {
-// database.ref('LED').set("0");
-// document.getElementById('led').innerHTML="turn on";
-// }
-// }
-	
-
-</script>
+<script src="https://cdn.jsdelivr.net/npm/chart.js@4.4.0/dist/chart.umd.min.js"></script>
+<script src="https://www.gstatic.com/firebasejs/8.6.8/firebase-app.js"></script>
+<script src="https://www.gstatic.com/firebasejs/8.6.8/firebase-database.js"></script>
 <script type="text/javascript" src="scripts.js"></script>
 </body>
 </html>
